# oop-gui

./: .gitignore  Makefile  config.py  pyproject.toml
src/: currency_window.py  exceptions.py  login_window.py  main.py  main_window.py  message.py  urls.py
src/DAL/: auth.py  client.py  currencies.py  currency_history.py  operation_maker.py  operations.py  registration.py  user_currencies.py  user_getter.py  utils.py
src/models/: currency.py  operation.py  user.py
src/view/: buy_window.py  currency_window.py  login_window.py  main.py  main_window.py  sell_wndow.py  utils.py
ui/: auth_form.py  auth_form.ui  buy_window.py  buy_window.ui  currency.py  currency.ui  main.py  main.ui  sell_window.py  sell_window.ui
