[tool.poetry]
name = "gui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.4.4"
mypy = "^0.761"
pydantic = "^1.4"
pyqt5 = "^5.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
