[tool.poetry]
name = "gui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.4.4"
mypy = "^0.761"
pydantic = "^1.4"
pyqt5 = "^5.15.0"
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^4.3.21"
autoflake = "^1.3.1"
unify = "^0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
