[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.4"
pyqt5 = "^5.15.0"
unify = "^0.5"
requests = "^2.24.0"
pyqtgraph = "^0.11.0"

[tool.poetry.scripts]
start_gui = "src.view.main:main"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
mypy = "^0.761"
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^4.3.21"
autoflake = "^1.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
